# CMSRucio

./: .gitignore  .gitmodules  CODEOWNERS  README.md  build-rucio-images.sh
DMOps/: ApproveRules.py  InvalidateReplicas.py  README.md  RepairFromDBS.py  ResurrectContent.py  StageDatasetForUser.py  SyncLostFilesDBS.py  dynamic_ddmquota_update.py  find_file_replicas.py  fix_tape_file_exists.py  get_account_info.py  get_error_logs.py  get_ff.py  get_stuck_rules.py  list_dids.py  list_replicas.py  list_subscription_rules.py  list_subscriptions.py  modify_protocol.py  nanoaod_subscription.py  rule_requests  set_regions.py  transferurl.py  update_account.py  update_rule.py
RucioOps/: README.md  int_upgrade.yaml
SiteOps/: ApproveRules.py  MyRSEs.py  dataops_ff  get_ff.py
UserDMTools/: README.md  requirements.txt  upload.py
UserDMTools/cmsrucio_import/: README.md  pyproject.toml
UserDMTools/cmsrucio_import/cmsrucio_import/: __main__.py  main.py
UserDMTools/cmsrucio_import/tests/: test_cmsrucio_import.py
docker/: docker-compose.yml
helpers/: README.md  fetch_locality.py  resurrect_dids.py  test_http_tape_rest_api.py
loadtest/: loadtest.py  run.sh
src/: CRIC_test.py  CleanupCampaign.py  CleanupTest.py  DeleteDistances  GetUnapprovedRules.py  IntLinks.py  IntSetupGlobusRSEs.py  IntSetupRSEs.py  IntSyncDatasets.py  MillionFileCheck.py  NanoSubscription.py  ResetDatasetNew  SetProtocolExample  SetTestQuotas  SetupDIDKeys.py  config_institute_policy.json  cric_user.py  get_fts.py  institute_policy.py  int_wmcore_datasets.json  policy_test.py  quota.py  set_new.py  (+6 more)
(+388 files in other folders)
