[tool.poetry]
name = "cmsrucio_import"
version = "0.1.0"
description = ""
authors = ["Rahul Chauhan <rahul.chauhan@cern.ch>"]
readme = "README.md"

[tool.poetry.scripts]
cmsrucio-import = "cmsrucio_import.main:app"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
